Only clean cart after checkout, not single buy

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" id="placeOrder"><i class="fas fa-shopping-cart"></i> &nbsp; Place Order</button>
+                        <button type="button" class="btn btn-primary" id="placeOrder" data-empty=true><i class="fas fa-shopping-cart"></i> &nbsp; Place Order</button>
                     </div>
                 </div>
             </div>
