Add shoppincar notification badge

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                         <!-- col.// -->
                         <div class="col-lg-2 col-sm-12">
                             <div class="icontext">
-                                <div class="icon-wrap"><i class="icon-sm round bg-primary text-white fa fa-shopping-cart"></i></div>
+                                <div class="icon-wrap"><i class="icon-sm round bg-primary text-white fa fa-shopping-cart"></i>
+                                    <span class="notify" id="cartNoti">4</span></div>
                                 <div class="text-wrap dropdown">
                                     <small>Shopping Cart</small>
                                     <a href="#" class="b" data-toggle="dropdown" data-offset="20,10" aria-expanded="false">
